<resources>
    <string name="app_name">Pride Flags Quiz</string>
    <string name="name_text_entry_hint">Your name</string>
    <string name="starting_instructions_text">Begin quiz</string>
    <string name="rainbow_flag_q">What is symbolized by the gay flag colors?</string>
    <string name="rainbow_flag_a1">Life</string>
    <string name="rainbow_flag_a2">Healing</string>
    <string name="rainbow_flag_a3">Sunlight</string>
    <string name="rainbow_flag_a4">Nature</string>
    <string name="rainbow_flag_a5">Serenity</string>
    <string name="rainbow_flag_a6">Spirit</string>
    <string name="rainbow_definition">The rainbow flag is a symbol of lesbian, gay, bisexual and transgender (LGBT) pride and LGBT social movements. The flag colors reflect the diversity of the LGBT community, but it when was first created by the openly gay activist Gilbert Baker back in 1978 each color represented either life, healing, sunlight, nature, serenity, or spirit accordingly (from top to bottom).</string>
    <string name="asexual_flag_q">Who\'s flag is this?</string>
    <string name="asexual_flag_a1">Bisexuals</string>
    <string name="asexual_flag_a2">Asexuals</string>
    <string name="asexual_flag_a3">Genderfluids</string>
    <string name="asexual_flag_a4">Transgenders</string>
    <string name="asexual_definition">This is the asexuals flag. Asexuals are individuals who experience low sexual attraction, low desire for sex, or are sexually attracted only under specific conditions. It is a continuum ranging from little to no attraction, and the individual\'s location on this continuum may change throughout life.</string>
    <string name="bisexual_flag_q">Who\'s flag is this?</string>
    <string name="bisexual_flag_a1">Bisexuals</string>
    <string name="bisexual_flag_a2">Asexuals</string>
    <string name="bisexual_flag_a3">Pansexuals</string>
    <string name="bisexual_flag_a4">Intersex</string>
    <string name="bisexual_definition">This is the bisexual flag. Bisexuals are individuals who are physically/romantically attracted to more than one gender. The degree of the attraction doesn\'t necessarily match for the two genders, and isn\'t necessarily constant throughout life.</string>
    <string name="genderqueer_flag_q">Who\'s flag is this?</string>
    <string name="genderqueer_flag_a1">Straight Allies</string>
    <string name="genderqueer_flag_a2">Polyamors</string>
    <string name="genderqueer_flag_a3">Pansexuals</string>
    <string name="genderqueer_flag_a4">Genderqueers</string>
    <string name="genderqueer_definition">This is the genderqueer flag. Genderqueer is a gender identity label often used by people who do not identify with the binary of man/woman; or as an umbrella term for many gender non-conforming or non-binary identities (e.g., agender, bigender, genderfluid). </string>
    <string name="poly_flag_q">Who\'s flag is this?</string>
    <string name="poly_flag_a1">Asexuals</string>
    <string name="poly_flag_a2">Agenders</string>
    <string name="poly_flag_a3">Polyamors</string>
    <string name="poly_flag_a4">Nonbinaries</string>
    <string name="poly_definition">This is the polyamory flag. Polyamory is the practice of, desire to, or orientation towards having ethically, honest, and consensual non-monogamous relationships (i.e. relationships that may include multiple partners).  This may include open relationships, polyfidelity (which involves more than two people being in romantic and/or sexual relationships which is not open to additional partners), amongst many other set-ups.</string>
    <string name="intersex_flag_q">Does this flag represent a sexual identity or a gender identity?</string>
    <string name="intersex_text_entry_hint">Enter "gender" or "sexual"</string>
    <string name="intersex_flag_a1">Gender</string>
    <string name="intersex_flag_a2">Sexual</string>
    <string name="intersex_definition">This is the intersex flag. Intersex people are individuals with a combination of chromosomes, gonads, hormones, internal sex organs, and genitals that differs from the two expected patterns of male or female. As it is a biological based attribute determined at birth, it is a sexual identity, unlike gender identities which are determined by the way a person defines him/her-self.</string>
    <string name="trans_flag_q">Who\'s flag is this?</string>
    <string name="trans_flag_a1">Polysexuals</string>
    <string name="trans_flag_a2">Transgenders</string>
    <string name="trans_flag_a3">Lesbians</string>
    <string name="trans_flag_a4">Bigenders</string>
    <string name="trans_definition">This is the transgenders flag. Transgenrs are individuals who live as a member of a gender other than that assigned at birth based on anatomical sex. A transgender man for example is a man born female. Note that this is a gender identity and doesn\'t imply on the person\'s sexual attraction. Often referred to as trans* as an indication of including non-binary genders.</string>
    <string name="submit_button_text">Submit answers</string>
    <string name="restart_button_text">Restart</string>
    <string name="message_perfect_score">Excellent job </string>
    <string name="message_decent_score">Nice job, but there\'s still room for improvement </string>
    <string name="message_bad_score">You better brush up on your LGBT flags </string>
    <string name="score_report1">You got </string>
    <string name="score_report2">/7 answers right.</string>
</resources>
