<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background"
    android:fillViewport="true"
    android:layoutDirection="ltr"
    android:orientation="vertical"
    android:padding="@dimen/padding"
    tools:context="com.example.adi.prideflagsquiz.MainActivity">

    <!-- Opening Layout -->
    <LinearLayout
        android:id="@+id/openingView"
        style="@style/questionLayout"
        android:layout_marginTop="0dp">

        <!-- Pre-quiz view -->
        <EditText
            android:id="@+id/name"
            style="@style/question"
            android:hint="@string/name_text_entry_hint"
            android:inputType="textCapWords" />

        <ImageView
            style="@style/flagImage"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:src="@drawable/lgbtflag" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/startQuiz"
                style="@style/button"
                android:layout_centerHorizontal="true"
                android:onClick="startQuiz"
                android:text="@string/starting_instructions_text"
                android:textSize="@dimen/questions_text_size" />
        </RelativeLayout>
    </LinearLayout>

    <!-- Questions layout-->
    <ScrollView
        android:id="@+id/questionsView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--Asexual question -->
            <LinearLayout
                android:id="@+id/asexualLayout"
                style="@style/questionLayout"
                android:layout_marginTop="0dp">

                <TextView
                    style="@style/question"
                    android:text="@string/asexual_flag_q" />

                <ImageView
                    style="@style/flagImage"
                    android:src="@drawable/asexualflag" />

                <TextView
                    android:id="@+id/asexual_definition"
                    style="@style/definition"
                    android:text="@string/asexual_definition" />

                <RadioGroup
                    android:id="@+id/asexual_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/asexual_a1"
                        style="@style/answer"
                        android:text="@string/asexual_flag_a1" />

                    <RadioButton
                        android:id="@+id/asexual_ans"
                        style="@style/answer"
                        android:text="@string/asexual_flag_a2" />

                    <RadioButton
                        android:id="@+id/asexual_a3"
                        style="@style/answer"
                        android:text="@string/asexual_flag_a3" />

                    <RadioButton
                        android:id="@+id/asexual_a4"
                        style="@style/answer"
                        android:text="@string/asexual_flag_a4" />
                </RadioGroup>
            </LinearLayout>

            <!--Genderqueer question -->
            <LinearLayout
                android:id="@+id/genderqueerLayout"
                style="@style/questionLayout">

                <TextView
                    style="@style/question"
                    android:text="@string/genderqueer_flag_q" />

                <ImageView
                    style="@style/flagImage"
                    android:src="@drawable/genderqueerflag" />

                <TextView
                    android:id="@+id/genderqueer_definition"
                    style="@style/definition"
                    android:text="@string/genderqueer_definition" />

                <RadioGroup
                    android:id="@+id/genderqueer_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/genderqueer_a1"
                        style="@style/answer"
                        android:text="@string/genderqueer_flag_a1" />

                    <RadioButton
                        android:id="@+id/genderqueer_a2"
                        style="@style/answer"
                        android:text="@string/genderqueer_flag_a2" />

                    <RadioButton
                        android:id="@+id/genderqueer_a3"
                        style="@style/answer"
                        android:text="@string/genderqueer_flag_a3" />

                    <RadioButton
                        android:id="@+id/genderqueer_ans"
                        style="@style/answer"
                        android:text="@string/genderqueer_flag_a4" />
                </RadioGroup>
            </LinearLayout>

            <!--Intersex question -->
            <LinearLayout
                android:id="@+id/intersexLayout"
                style="@style/questionLayout">

                <TextView
                    style="@style/question"
                    android:text="@string/intersex_flag_q" />

                <ImageView
                    style="@style/flagImage"
                    android:src="@drawable/intersexflag" />

                <TextView
                    android:id="@+id/intersex_definition"
                    style="@style/definition"
                    android:text="@string/intersex_definition" />

                <AutoCompleteTextView
                    android:id="@+id/intersex_ans"
                    style="@style/answer"
                    android:hint="@string/intersex_text_entry_hint"
                    android:imeOptions="actionDone"
                    android:inputType="textCapWords" />
            </LinearLayout>

            <!--Bisexual question -->
            <LinearLayout
                android:id="@+id/bisexualLayout"
                style="@style/questionLayout">

                <TextView
                    style="@style/question"
                    android:text="@string/bisexual_flag_q" />

                <ImageView
                    style="@style/flagImage"
                    android:src="@drawable/bisexualflag" />

                <TextView
                    android:id="@+id/bisexual_definition"
                    style="@style/definition"
                    android:text="@string/bisexual_definition" />

                <RadioGroup
                    android:id="@+id/bisexual_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/bisexual_ans"
                        style="@style/answer"
                        android:text="@string/bisexual_flag_a1" />

                    <RadioButton
                        android:id="@+id/bisexual_a2"
                        style="@style/answer"
                        android:text="@string/bisexual_flag_a2" />

                    <RadioButton
                        android:id="@+id/bisexual_a3"
                        style="@style/answer"
                        android:text="@string/bisexual_flag_a3" />

                    <RadioButton
                        android:id="@+id/bisexual_a4"
                        style="@style/answer"
                        android:text="@string/bisexual_flag_a4" />
                </RadioGroup>
            </LinearLayout>

            <!--Transgender question -->
            <LinearLayout
                android:id="@+id/transLayout"
                style="@style/questionLayout">

                <TextView
                    style="@style/question"
                    android:text="@string/trans_flag_q" />

                <ImageView
                    style="@style/flagImage"
                    android:src="@drawable/transflag" />

                <TextView
                    android:id="@+id/trans_definition"
                    style="@style/definition"
                    android:text="@string/trans_definition" />

                <RadioGroup
                    android:id="@+id/trans_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/trans_a1"
                        style="@style/answer"
                        android:text="@string/trans_flag_a1" />

                    <RadioButton
                        android:id="@+id/trans_ans"
                        style="@style/answer"
                        android:text="@string/trans_flag_a2" />

                    <RadioButton
                        android:id="@+id/trans_a3"
                        style="@style/answer"
                        android:text="@string/trans_flag_a3" />

                    <RadioButton
                        android:id="@+id/trans_a4"
                        style="@style/answer"
                        android:text="@string/trans_flag_a4" />
                </RadioGroup>
            </LinearLayout>

            <!--Rainbor flag question -->
            <LinearLayout
                android:id="@+id/rainbowLayout"
                style="@style/questionLayout">

                <TextView
                    style="@style/question"
                    android:text="@string/rainbow_flag_q" />

                <ImageView
                    style="@style/flagImage"
                    android:src="@drawable/rainbowflag" />

                <TextView
                    android:id="@+id/rainbow_definition"
                    style="@style/definition"
                    android:text="@string/rainbow_definition" />

                <CheckBox
                    android:id="@+id/rainbow_ans1"
                    style="@style/answer"
                    android:paddingLeft="@dimen/padding_checkbox_left"
                    android:text="@string/rainbow_flag_a1" />

                <CheckBox
                    android:id="@+id/rainbow_ans2"
                    style="@style/answer"
                    android:paddingLeft="@dimen/padding_checkbox_left"
                    android:text="@string/rainbow_flag_a2" />

                <CheckBox
                    android:id="@+id/rainbow_ans3"
                    style="@style/answer"
                    android:paddingLeft="@dimen/padding_checkbox_left"
                    android:text="@string/rainbow_flag_a3" />

                <CheckBox
                    android:id="@+id/rainbow_ans4"
                    style="@style/answer"
                    android:paddingLeft="@dimen/padding_checkbox_left"
                    android:text="@string/rainbow_flag_a4" />

                <CheckBox
                    android:id="@+id/rainbow_ans5"
                    style="@style/answer"
                    android:paddingLeft="@dimen/padding_checkbox_left"
                    android:text="@string/rainbow_flag_a5" />

                <CheckBox
                    android:id="@+id/rainbow_ans6"
                    style="@style/answer"
                    android:paddingLeft="@dimen/padding_checkbox_left"
                    android:text="@string/rainbow_flag_a6" />
            </LinearLayout>

            <!--Polyamory question -->
            <LinearLayout
                android:id="@+id/polyLayout"
                style="@style/questionLayout">

                <TextView
                    style="@style/question"
                    android:text="@string/poly_flag_q" />

                <ImageView
                    style="@style/flagImage"
                    android:src="@drawable/polyamoryflag" />

                <TextView
                    android:id="@+id/poly_definition"
                    style="@style/definition"
                    android:text="@string/poly_definition" />

                <RadioGroup
                    android:id="@+id/poly_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/poly_a1"
                        style="@style/answer"
                        android:text="@string/poly_flag_a1" />

                    <RadioButton
                        android:id="@+id/poly_a2"
                        style="@style/answer"
                        android:text="@string/poly_flag_a2" />

                    <RadioButton
                        android:id="@+id/poly_ans"
                        style="@style/answer"
                        android:text="@string/poly_flag_a3" />

                    <RadioButton
                        android:id="@+id/poly_a4"
                        style="@style/answer"
                        android:text="@string/poly_flag_a4" />
                </RadioGroup>
            </LinearLayout>

            <Button
                style="@style/button"
                android:layout_gravity="center"
                android:onClick="checkAnswers"
                android:text="@string/submit_button_text" />

            <Button
                style="@style/button"
                android:layout_gravity="center"
                android:onClick="reset"
                android:text="@string/restart_button_text" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
